Inital updates - bump depencies, switch to prosteges and add env.md file

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,9 @@ GITHUB_CLIENT_SECRET=
 GITHUB_ACCESS_TOKEN=
 
 # -----------------------------------------------------------------------------
-# Database (MySQL - PlanetScale)
+# Database (Prostege sql - neon)
 # -----------------------------------------------------------------------------
-DATABASE_URL="mysql://root:root@localhost:3306/taxonomy?schema=public"
+DATABASE_URL="urlhere"
 
 # -----------------------------------------------------------------------------
 # Email (Postmark)
