--- a/package.json
+++ b/package.json
@@ -16,105 +16,107 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@commitlint/cli": "^19.1.0",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@editorjs/code": "^2.9.0",
-    "@editorjs/editorjs": "^2.29.0",
-    "@editorjs/embed": "^2.7.0",
-    "@editorjs/header": "^2.8.1",
-    "@editorjs/inline-code": "^1.5.0",
+    "@editorjs/editorjs": "^2.30.5",
+    "@editorjs/embed": "^2.7.4",
+    "@editorjs/header": "^2.8.7",
+    "@editorjs/inline-code": "^1.5.1",
     "@editorjs/link": "^2.6.2",
-    "@editorjs/list": "^1.9.0",
-    "@editorjs/paragraph": "^2.11.3",
-    "@editorjs/table": "^2.3.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@editorjs/list": "^1.10.0",
+    "@editorjs/paragraph": "^2.11.6",
+    "@editorjs/table": "^2.4.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.11.0",
-    "@radix-ui/react-accessible-icon": "^1.0.3",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
+    "@prisma/client": "^5.19.0",
+    "@radix-ui/react-accessible-icon": "^1.1.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-context-menu": "^2.2.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.26",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.21",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vercel/analytics": "^1.2.2",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^20.16.3",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/og": "^0.6.2",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.4.0",
-    "embla-carousel-react": "^8.0.0",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.7",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
-    "husky": "^9.0.11",
-    "input-otp": "^1.1.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "husky": "^9.1.5",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.356.0",
-    "next": "^14.1.3",
+    "next": "^14.2.7",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.12",
-    "postcss": "^8.4.35",
-    "postmark": "^4.0.2",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "nodemailer": "^6.9.14",
+    "postcss": "^8.4.44",
+    "postmark": "^4.0.5",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "pretty-quick": "^4.0.0",
-    "prisma": "^5.11.0",
+    "prisma": "^5.19.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-editor-js": "^2.1.0",
-    "react-hook-form": "^7.51.0",
-    "react-resizable-panels": "^2.0.12",
+    "react-hook-form": "^7.53.0",
+    "react-resizable-panels": "^2.1.2",
     "react-textarea-autosize": "^8.5.3",
+    "recharts": "^2.12.7",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.13.0",
+    "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
-    "sharp": "^0.33.2",
-    "shiki": "^1.1.7",
-    "sonner": "^1.4.3",
-    "stripe": "^14.20.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
+    "sharp": "^0.33.5",
+    "shiki": "^1.16.1",
+    "sonner": "^1.5.0",
+    "stripe": "^14.25.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.2",
+    "typescript": "^5.5.4",
     "unist-util-visit": "^5.0.0",
-    "vaul": "^0.9.0",
+    "vaul": "^0.9.1",
     "velite": "0.1.0-beta.13",
-    "zod": "^3.22.4"
-  }
+    "zod": "^3.23.8"
+  },
+  "packageManager": "pnpm@9.9.0"
 }
